Style footer and fix overflow of the div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,15 +252,16 @@ h1 h2 {
 .footer {
     background-color: #BB371A;
     width: 100%;
-    padding: 75px;
-    height: fit-content;
+    height: 200px;
     color: white;
     display: flex;
 }
 
 .social-media {
-    width: 33%;
+    width: 20%;
     height: fit-content;
+    padding: 35px;
+    margin: auto;
 }
 
 .social-media i {
